Implement review changes